# nlp-playground

./: .gitignore  0010_pipeline.ipynb  README.md  main.py  pyproject.toml  run.sh
.ai/: AGENTS.md
.jupyter/: jupyter_server_config.py
matplotlib/: 0010_simple.ipynb  010_simple.ipynb  README.md
nlp/: README.md
nltk/: 010_simple_example.ipynb  README.md
numpy/: 0010_simple.ipynb  0020_load_file.ipynb  010_simple.ipynb  020_load_file.ipynb  020_load_file.txt  020_load_file_2.txt  030_ufunc.ipynb  README.md
pandas/: 010_plot_simple.ipynb  020_series_dataframe.ipynb  README.md
seaborn/: 0010_simple.ipynb  README.md
spacy/: 0010_simple.ipynb  0020_pipeline.ipynb  README.md
