[project]
name = "ai-playground"
version = "0.1.0"
description = "AI playground"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "spacy>=3.8.13",
]
